<resources>
    <string name="app_name">Вместе</string>
    <string name="nearest_lesson">Ближайшее занятие</string>
    <string name="learned">Пройдено</string>
    <string name="left">Осталось</string>
    <string name="show_chat">Показать чат</string>
    <string name="no_new">Нет новых</string>
    <string name="all">Все</string>
    <string name="last_courses">Последние курсы</string>
    <string name="your_notes">Ваши заметки</string>
    <string name="community_notes">Заметки сообщества</string>
    <string name="telephone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
</resources>