<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/tvNearestLesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nearest_lesson"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNearestLessonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Сегодня в 12:00"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvNearestLesson"
                app:layout_constraintTop_toBottomOf="@id/tvNearestLesson" />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_search_button"
                android:padding="12dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/tvNearestLessonDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvNearestLesson" />

            <TextView
                android:id="@+id/tvLearned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/learned"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tvNearestLessonDate"
                app:layout_constraintTop_toBottomOf="@id/tvNearestLessonDate" />

            <TextView
                android:id="@+id/tvLearnedCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 курса"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tvLearned"
                app:layout_constraintTop_toBottomOf="@id/tvLearned" />

            <TextView
                android:id="@+id/tvLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvLearned" />

            <TextView
                android:id="@+id/tvLeftLessons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14 занятий"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tvLeft"
                app:layout_constraintTop_toBottomOf="@id/tvLeft" />

            <Button
                android:id="@+id/btnShowChat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:backgroundTint="@color/dark_gray"
                android:background="@drawable/bg_dark_corner_shape"
                android:padding="12dp"
                android:text="@string/show_chat"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tvLeftLessons"
                app:layout_constraintStart_toStartOf="@id/tvLearnedCourses"
                app:layout_constraintTop_toBottomOf="@id/tvLearnedCourses" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/no_new"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btnShowChat"
                app:layout_constraintEnd_toEndOf="@id/btnShowChat"
                app:layout_constraintTop_toTopOf="@id/btnShowChat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/tvLastCourses"
                android:layout_marginStart="16dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/last_courses"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@drawable/bg_left_button_fragment"
                android:paddingVertical="8dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnLastCoursesAll"/>

            <Button
                android:id="@+id/btnLastCoursesAll"
                android:layout_width="64dp"
                android:padding="0dp"
                android:layout_marginEnd="16dp"
                android:layout_height="0dp"
                android:text="@string/all"
                android:background="@drawable/bg_right_button_fragment"
                app:backgroundTint="@color/light_gray"
                android:textColor="@color/gray"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="@id/tvLastCourses"
                app:layout_constraintBottom_toBottomOf="@id/tvLastCourses"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLastCourses"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/fragment_last_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/tvLastCourses"
                app:layout_constraintEnd_toEndOf="@id/btnLastCoursesAll"
                app:layout_constraintTop_toBottomOf="@id/tvLastCourses"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>